--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h2>Matrix Transformation on Image Pixels</h2>
 <div class="note">
-  This version uses <b>math coordinates</b>: +y is upward. Click a point on the left image to track it.
+  Click a point on the left image to track it.
 </div>
 
 <div class="controls">
